# n2bio

./: .gitignore  Cargo.toml  README.md
bamrep/: Cargo.toml
bamrep/src/: main.rs  report.rs  stats.rs
bvgg/: Cargo.toml
bvgg/src/: main.rs
bvpg/: Cargo.toml
bvpg/src/: main.rs
fastcov/: Cargo.toml
fastcov/src/: main.rs
fastfilter/: Cargo.toml
fastfilter/src/: main.rs
n2core/: Cargo.toml
n2core/src/: align.rs  alignmentgraph.rs  bam.rs  circgraph.rs  fasta.rs  fastq.rs  graph.rs  hist.rs  kgraph.rs  kmer.rs  lib.rs  readers.rs  sam.rs  sequence.rs  writers.rs
peat/: Cargo.toml
pfqbz2gz/: Cargo.toml
pfqbz2gz/src/: main.rs
pfqsim/: Cargo.toml  README.md
pfqsim/example_files/: CHM13_mapping.tsv  HRFT.config.tsv  HRFT.manifest.tsv  HRFTv13_analyze.html  HRFTv13_analyze.json  HRFTv13_bamrep.html  HRFTv13_bamrep.json  name_sorted_bam_model.json
pfqsim/src/: analyze.rs  analyze_report.rs  cli.rs  compare.rs  compose.rs  config.rs  evalstats.rs  generate.rs  genome.rs  hist.rs  inserts.rs  main.rs  model.rs  modelstats.rs  mutate.rs  qualities.rs  report.rs  simstats.rs
vref2db/: Cargo.toml
vref2db/src/: main.rs
xbag/: Cargo.toml
xbag/src/: main.rs
