# n2core/bamrep/Cargo.toml

[package]
name = "bamrep"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
rayon = "1.8"

# n2core
n2core = { path = "../n2core" }