# n2bio/bvpg/Cargo.toml

[package]
name = "bvpg"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.8", features = ["serde-1"] }
bincode = "1.3"
n2core = { path = "../n2core" }