# n2bio/peat/Cargo.toml

[package]
name = "peat"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
serde_json = "1.0"
rusqlite = "0.31"
n2core = { path = "../n2core" }