# n2bio/vref2db/Cargo.toml

[package]
name = "vref2db"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.31"
clap = { version = "4.5", features = ["derive"] }